force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/FNS_ApplicationWithQueueActivity__c.object-meta.xml
<CustomObject>
    <label>Application With QueueActivity</label>
    <nameField>
        <label>ApplicationWithQueueActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications With QueueActivity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>