force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_Activity__c.field-meta.xml
<CustomField>
    <fullName>FNS_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>FNS_Activity__c</referenceTo>
    <relationshipLabel>Applications With QueueActivity</relationshipLabel>
    <relationshipName>Applications_With_QueueActivity</relationshipName>
    <type>Lookup</type>
</CustomField>