force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ActivityExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ActivityExternalId__c</fullName>
    <label>Activity External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>