force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ActivityNotes__c.field-meta.xml
<CustomField>
    <fullName>FNS_ActivityNotes__c</fullName>
    <label>Activity Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>