force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_Application__c.field-meta.xml
<CustomField>
    <fullName>FNS_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applications With QueueActivity</relationshipLabel>
    <relationshipName>Applications_With_QueueActivity</relationshipName>
    <type>Lookup</type>
</CustomField>