force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationCloseDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationCloseDate__c</fullName>
    <formula>FNS_Application__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Close Date</label>
    <type>Date</type>
</CustomField>