force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationDescription__c</fullName>
    <label>Application Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>