force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExternalId__c</fullName>
    <label>Application External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>