force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExtId__c</fullName>
    <formula>FNS_Application__r.FNS_ApplicationExtId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Ext Id</label>
    <type>Text</type>
</CustomField>