force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationName__c</fullName>
    <formula>FNS_Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>