force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationQuip__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationQuip__c</fullName>
    <formula>FNS_Application__r.FNS_Quip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Quip</label>
    <type>Text</type>
</CustomField>