force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ApplicationStage__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationStage__c</fullName>
    <formula>Text(FNS_Application__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Stage</label>
    <type>Text</type>
</CustomField>