force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_CompletedByUserId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CompletedByUserId__c</fullName>
    <label>Completed By User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>