force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_CompletionDate__c</fullName>
    <label>Completion Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>