force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_CompletionTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_CompletionTime__c</fullName>
    <label>Completion Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>