force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_CreatedByUserId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CreatedByUserId__c</fullName>
    <label>Created By User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>