force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_CreationDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_CreationDate__c</fullName>
    <label>Creation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>