force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_DueDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_DueDate__c</fullName>
    <label>Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>