force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_DueTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_DueTime__c</fullName>
    <label>Due Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>