force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_GroupDueDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_GroupDueDate__c</fullName>
    <label>Group Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>