force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_HostIdentifier__c.field-meta.xml
<CustomField>
    <fullName>FNS_HostIdentifier__c</fullName>
    <label>Host Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>