force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_IsCommunity__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Community</label>
    <type>Checkbox</type>
</CustomField>