force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_IsCurrentActivity__c.field-meta.xml
<CustomField>
    <fullName>FNS_IsCurrentActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Activity</label>
    <type>Checkbox</type>
</CustomField>