force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_JobDueDate__c.field-meta.xml
<CustomField>
    <fullName>FNS_JobDueDate__c</fullName>
    <label>Job Due Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>