force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_LegalBookNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_LegalBookNumber__c</fullName>
    <label>Legal Book Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>