force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_NumberOfHours__c.field-meta.xml
<CustomField>
    <fullName>FNS_NumberOfHours__c</fullName>
    <label>Number of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>