force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ProcessCenterId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessCenterId__c</fullName>
    <label>Process Center Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>