force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ProcessGroupId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessGroupId__c</fullName>
    <label>Process Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>