force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_ProcessJobId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProcessJobId__c</fullName>
    <label>Process Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>