force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_SlaIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_SlaIndicator__c</fullName>
    <label>Sla Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>