force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_SlaPercentage__c.field-meta.xml
<CustomField>
    <fullName>FNS_SlaPercentage__c</fullName>
    <label>Sla Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>