force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_StartDateTime__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>