force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_StartTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_StartTime__c</fullName>
    <label>Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>