force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_Status__c.field-meta.xml
<CustomField>
    <fullName>FNS_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>