force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_StopClockIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_StopClockIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Clock Indicator</label>
    <type>Checkbox</type>
</CustomField>