force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/fields/FNS_User__c.field-meta.xml
<CustomField>
    <fullName>FNS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApplicationsWithQueueActivity</relationshipName>
    <type>Lookup</type>
</CustomField>