force-app/main/default/objects/FNS_ApplicationWithQueueActivity__c/recordTypes/FNS_ApplicationWithQueueActivity.recordType-meta.xml
<RecordType>
    <fullName>FNS_ApplicationWithQueueActivity</fullName>
    <active>true</active>
    <label>FNS ApplicationWithQueueActivity</label>
</RecordType>